# command-line-rust-solutions

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml  test.yml
01-hello/: Cargo.toml
02-echor/: Cargo.toml
02-echor/src/: main.rs
02-echor/tests/: cli.rs
03-catr/: Cargo.toml
03-catr/src/: main.rs
04-headr/: Cargo.toml
04-headr/src/: main.rs
04-headr/tests/: cli.rs
05-wcr/: Cargo.toml
05-wcr/src/: lib.rs  main.rs
06-uniqr/: Cargo.toml
06-uniqr/src/: main.rs
07-findr/: Cargo.toml
07-findr/src/: main.rs
07-findr/tests/: cli.rs
util/: Cargo.toml
util/src/: lib.rs
