[package]
name = "wcr"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
simple-eyre.workspace = true
util.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
rand.workspace = true
