[package]
name = "findr"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-eyre.workspace = true
clap.workspace = true
walkdir = "2"
regex = "1"

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
rand.workspace = true
